Fixed 'general information' spacing / spacing of padding/margin with blurb after

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -420,12 +420,14 @@ h2{
 }
 #newsLetterBTN{
     text-align: center;
-    background: rgba(122, 29, 29, 0.397);
-    margin: 1rem; 
+    background: linear-gradient(rgba(141, 0, 0, 0.719), rgb(17, 0, 0));
+    margin: 1rem;
+    box-shadow: 0px 0px 10px 0px black, 0px 0px 10px 1px rgba(206, 40, 40, 0.712) inset;
     padding:0.5rem; 
     border-radius: 2rem;;
 }
 #newsLetterBTN:hover{
+    transition: 0.2s;
     box-shadow: 0px 0px 0px 5px black, 0px 0px 20px 0px rgba(255, 104, 104, 0.445) inset;
 }
 .qualificationGridSpacing{
@@ -619,7 +621,7 @@ padding: 0.2rem 0.2rem 0.2rem 1rem;
 }
 .aboutMeCategorySpan {
     display: grid;
-    margin: -5.5rem 0rem 0rem 0.2rem;
+    margin: -5.5rem 0rem 0rem 0rem;
     background: rgba(195, 0, 255, 0.247);
     box-shadow: 0px 0px 0px 1px rgba(172, 30, 255, 0.432) ;
     width: fit-content;
@@ -676,7 +678,7 @@ h4{
     background: rgba(0, 0, 0, 0.719);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.733), 1px 1px 10px 0px #3f0858 inset;
     padding: 1.2rem 1.3rem 1.2rem 1.2rem;
-    margin: 0rem -1rem 0rem -1rem;
+    margin: 0rem 0rem 0rem 0rem;
     line-height: 1.8rem;
 }
 
